# iommi_lsp

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/iommi_lsp/: cli.py  config.py  interceptor.py  jsonrpc.py  log.py  parse_cache.py  proxy.py
src/iommi_lsp/analyzers/: __init__.py  base.py
src/iommi_lsp/analyzers/admin/: analyzer.py
src/iommi_lsp/analyzers/django/: __init__.py  analyzer.py  builtins.py  index.py  magic.py
src/iommi_lsp/analyzers/forms/: analyzer.py
src/iommi_lsp/analyzers/iommi/: analyzer.py  build.py  graph.py  reflect.py
src/iommi_lsp/analyzers/migrations/: analyzer.py
src/iommi_lsp/analyzers/settings/: analyzer.py
src/iommi_lsp/analyzers/templates/: analyzer.py
src/iommi_lsp/analyzers/urls/: analyzer.py
src/iommi_lsp/analyzers/views/: analyzer.py
tests/: conftest.py  diagnostic_spewer.py  fake_ty.py  fake_ty_completer.py  test_completion_matchmaker.py  test_config.py  test_contract_real_ty.py  test_django_analyzer.py  test_django_f_operator.py  test_django_index.py  test_django_orm_completion.py  test_django_orm_diagnostics.py  test_filter_e2e.py  test_incremental_index.py  test_interceptor.py  test_iommi_analyzer.py  test_iommi_completion.py  test_iommi_graph.py  test_iommi_walker.py  test_jsonrpc.py  test_proxy.py  test_settings_completion.py  test_settings_completion_e2e.py  test_sniffer.py  test_template_completion.py  test_url_analyzer.py
tests/corpus/basic_django/: .iommi_lsp-graph.json  usage.py
tests/corpus/basic_django/myapp/: models.py
tests/corpus/contract/: .iommi_lsp-graph.json  pyproject.toml
tests/corpus/settings_project/: .iommi_lsp-graph.json  settings.py
(+5 files in other folders)
