[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iommi_lsp"
version = "0.0.1"
description = "Wrapper LSP that proxies ty and filters Django/iommi false-positive diagnostics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Anders Hovmöller" }]
dependencies = [
    "lsprotocol>=2024.0.0,<2026.0.0",
    # Pinned narrow range — ty is pre-1.0 and diagnostic codes/text move.
    "ty>=0.0.34,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
iommi_lsp = "iommi_lsp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iommi_lsp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
